force-app/main/default/objects/Transport_address__c/Transport_address__c.object-meta.xml
<CustomObject>
    <description>国内陸送先住所（唄）</description>
    <label>陸送先</label>
    <nameField>
        <label>陸送先</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>