force-app/main/default/objects/Transport_address__c/fields/forklift__c.field-meta.xml
<CustomField>
    <fullName>forklift__c</fullName>
    <label>フォークリフト</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>なし</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>あり</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>