force-app/main/default/objects/Transport_address__c/fields/forklift_weight__c.field-meta.xml
<CustomField>
    <fullName>forklift_weight__c</fullName>
    <label>フォークリフト重量</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>2t</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3t</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>4t以上</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>なし</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>