force-app/main/default/objects/Transport_address__c/fields/KN_RKSO_JUCU_KBN__c.field-meta.xml
<CustomField>
    <fullName>KN_RKSO_JUCU_KBN__c</fullName>
    <label>陸送受注</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>全て受注</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>要確認</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>