force-app/main/default/objects/Transport_address__c/fields/landing_cd__c.field-meta.xml
<CustomField>
    <fullName>landing_cd__c</fullName>
    <label>着地コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>