force-app/main/default/objects/Transport_address__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>会員</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>陸送先</relationshipLabel>
    <relationshipName>member_auction_Member_Transport_address</relationshipName>
    <type>Lookup</type>
</CustomField>