force-app/main/default/objects/Transport_address__c/fields/others_precautions__c.field-meta.xml
<CustomField>
    <fullName>others_precautions__c</fullName>
    <label>その他注意事項</label>
    <length>255</length>
    <type>Text</type>
</CustomField>