force-app/main/default/objects/Transport_address__c/fields/rikuso_stei_saki_address2__c.field-meta.xml
<CustomField>
    <fullName>rikuso_stei_saki_address2__c</fullName>
    <label>以降住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>