force-app/main/default/objects/Transport_address__c/fields/rikuso_stei_saki_address__c.field-meta.xml
<CustomField>
    <fullName>rikuso_stei_saki_address__c</fullName>
    <label>市区町村</label>
    <length>255</length>
    <type>Text</type>
</CustomField>