force-app/main/default/objects/Transport_address__c/fields/rikuso_stei_saki_hnny_saki_nm__c.field-meta.xml
<CustomField>
    <fullName>rikuso_stei_saki_hnny_saki_nm__c</fullName>
    <label>搬入先名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>