force-app/main/default/objects/Transport_address__c/fields/rikuso_stei_saki_jp_local_cd__c.field-meta.xml
<CustomField>
    <fullName>rikuso_stei_saki_jp_local_cd__c</fullName>
    <label>日本地方公共団体コード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>