force-app/main/default/objects/Transport_address__c/fields/rikuso_stei_saki_postal_code__c.field-meta.xml
<CustomField>
    <fullName>rikuso_stei_saki_postal_code__c</fullName>
    <label>郵便番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>