force-app/main/default/objects/Transport_address__c/fields/rikuso_stei_saki_tant_nm__c.field-meta.xml
<CustomField>
    <fullName>rikuso_stei_saki_tant_nm__c</fullName>
    <label>担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>