force-app/main/default/objects/Transport_address__c/fields/rikuso_stei_saki_tant_tel_no__c.field-meta.xml
<CustomField>
    <fullName>rikuso_stei_saki_tant_tel_no__c</fullName>
    <label>担当者連絡先</label>
    <type>Phone</type>
</CustomField>