force-app/main/default/objects/Transport_address__c/fields/rikuso_stei_saki_tel_no__c.field-meta.xml
<CustomField>
    <fullName>rikuso_stei_saki_tel_no__c</fullName>
    <label>連絡先</label>
    <type>Phone</type>
</CustomField>