force-app/main/default/objects/Transport_address__c/fields/rikuso_stei_saki_title_flg__c.field-meta.xml
<CustomField>
    <fullName>rikuso_stei_saki_title_flg__c</fullName>
    <label>タイトルフラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>