force-app/main/default/objects/Transport_address__c/fields/rikuso_stei_saki_todofken_cd__c.field-meta.xml
<CustomField>
    <fullName>rikuso_stei_saki_todofken_cd__c</fullName>
    <label>都道府県</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Prefectures</valueSetName>
    </valueSet>
</CustomField>