force-app/main/default/objects/Transport_address__c/fields/stei_saki_no__c.field-meta.xml
<CustomField>
    <fullName>stei_saki_no__c</fullName>
    <label>指定先No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>