force-app/main/default/objects/Transport_address__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>stei_saki_no__c</columns>
    <columns>rikuso_stei_saki_hnny_saki_nm__c</columns>
    <columns>rikuso_stei_saki_tant_nm__c</columns>
    <columns>rikuso_stei_saki_postal_code__c</columns>
    <columns>rikuso_stei_saki_jp_local_cd__c</columns>
    <columns>rikuso_stei_saki_address__c</columns>
    <columns>rikuso_stei_saki_address2__c</columns>
    <columns>rikuso_stei_saki_tel_no__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべてのレコード</label>
</ListView>